--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,3 +10,23 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+
+/* likes */
+
+.like {
+    font-size: 18px;
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    background-color: #db0000;
+    color: white;
+    border: 0;
+    border-radius: 50%;
+    width: 55px;
+    height: 55px;
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
