--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,6 +26,7 @@
             <ul>
                 <li><a href="#/now-playing"> Now PLaying </a></li>
                 <li><a href="#/upcoming"> Upcoming </a></li>
+                <li><a href="#/like">Liked Movies</a></li>
             </ul>
         </nav>
     </header>
